[package]
name = "ipwall"
version = "0.1.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Download IP blocklists and add them to your iptables setup"

[dependencies]
anyhow = "1.0.71"
attohttpc = { version = "0.25.0", default-features = false, features = ["compress", "tls-rustls"] }
basic-toml = "0.1.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.3.0", features = ["derive"] }
directories = "5.0.1"
duct = "0.13.6"
ipnetwork = { version = "0.20.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
which = "4.4.0"

[profile.release]
lto = true
strip = true
